--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": "next/core-web-vitals"
+	"plugins": ["react"],
+	"extends": [
+		"next/core-web-vitals",
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:react-hooks/recommended",
+	],
+	"rules": {
+		"react/react-in-jsx-scope": "off",
+		"prettier/prettier": [
+			"error",
+			{
+				"printWidth": 80,
+				"endOfLine": "lf",
+				"singleQuote": true,
+				"tabWidth": 2,
+				"indentStyle": "space",
+				"useTabs": true,
+				"trailingComma": "es5",
+			},
+		],
+	},
 }
